Mon May 12 13:16:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs,xappy/_checkxapian.py,
	  xappy/doctests/searchconnection_doctest2.txt,xappy/fieldactions.py,
	  xappy/indexerconnection.py,xappy/searchconnection.py: Add links
	  to new xapian packages with support for ValueWeightPostingSource.
	  Tidy up error handling in search and indexer connections if an
	  error occurs while reading the configuration.  Update a test case
	  which has slightly different behaviour with the new xapian.  Add
	  support for "WEIGHT" action for fields when indexing (no
	  corresponding support at search time yet, so this isn't useful
	  currently).

Wed May 07 22:34:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* setup.py,testsuite/coverage.py,testsuite/runtests.py,xappy/test.py:
	  Reorganise test runners, so that "eggsetup.py test" actually
	  works.

Wed May 07 14:25:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/coverage.py: Update with changes from latest upstream.

Wed May 07 14:13:04 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* setup.py,testsuite/runtests.py,testsuite/unittests/,xappy/,
	  xappy/unittests/: Move doctests and unittests to separate
	  directories under xappy, make unittests into a module, and
	  incorporate running the unittests into the main testsuite runner.

Tue May 06 15:39:03 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* secore/,testsuite/runtests.py: Remove secore backwards
	  compatibility layer - we're about to break compatibility anyway,
	  so this will shortly be completely useless.

Tue Apr 29 08:25:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* MANIFEST.in,setup.py: Update setup.py and MANIFEST ready for 0.5
	  release.

Tue Apr 29 07:58:10 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update scripts to