@@ -1,3 +1,12 @@
+Mon May 12 18:32:14 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+ 
+	* xappy/fieldactions.py: Fix typo.
+	* xappy/searchconnection.py: Add support for ranking search results
+	  using weight fields. Also, add get_max_possible_weight(query) to
+	  assist in balancing the weights returned by different query
+	  components.
+	* xappy/unittests/weight_action.py: Add test of "WEIGHT" action.
+
 Mon May 12 13:16:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py,utils/make_xappy_tarballs,xappy/_checkxapian.py,
